<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="@dimen/_20sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/text_main"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/grey"
        android:textStyle="normal"
        android:justificationMode="inter_word"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionValue"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/developerName"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailText"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12sdp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textColor="#5A83FF"
        android:textSize="@dimen/_12sdp"
        android:textIsSelectable="true"
        android:gravity="center_horizontal"
        />

</LinearLayout>