<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_grey"
    android:padding="@dimen/_5sdp"
    tools:context=".presentation.activity.WorkActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/resultImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmShowSteps" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmShowSteps">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_20sdp"
            android:text="@string/textLength" />
        <TextView
            android:id="@+id/textScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:text="@string/_1_1000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_20sdp"
            android:text="@string/second_text" />
        <TextView
            android:id="@+id/resultLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:text="@string/doubleLength" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btmShowSteps"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:padding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:text="@string/show"
        android:textSize="@dimen/_12ssp"
        android:textColor="#FFFFFF"
        android:shadowColor="@color/grey"
        android:shadowRadius="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/soft_grey"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_25sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmShowSteps" />

</androidx.constraintlayout.widget.ConstraintLayout>