<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:paddingTop="@dimen/_5sdp"
    android:background="@color/soft_grey"
    tools:context=".presentation.activity.SourceDataActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">
        <TextView
            android:id="@+id/textPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <FrameLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:background="@drawable/image_background"
            android:layout_gravity="center"
            tools:ignore="UselessParent">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/_136sdp"
                android:layout_height="@dimen/_136sdp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/choose_side"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinnerSide"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:entries="@array/side"
            android:spinnerMode="dialog"
            android:background="@drawable/name_app_shape"
            android:textAlignment="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">
        <TextView
            android:id="@+id/textScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/choose_scale"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinnerScale"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:entries="@array/scale"
            android:spinnerMode="dialog"
            android:background="@drawable/name_app_shape"
            android:textAlignment="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:padding="@dimen/_4sdp"
            android:text="@string/takePhoto"
            android:textSize="@dimen/_12ssp"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/grey"
            android:shadowRadius="3"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/button_shape"
            android:padding="@dimen/_4sdp"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textSize="@dimen/_12ssp"
            android:textColor="#FFFFFF"
            android:shadowColor="@color/grey"
            android:shadowRadius="3"/>
    </FrameLayout>


</LinearLayout>