<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_grey"
    android:orientation="vertical"
    tools:context=".presentation.activity.MainActivity">

    <LinearLayout
        android:id="@+id/first_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:layout_weight="3"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_weight="1"
            android:background="@drawable/name_app_shape"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/blue_grey"
            android:textSize="@dimen/_27ssp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/button_shape"
            android:padding="@dimen/_4sdp"
            android:shadowColor="@color/grey"
            android:shadowRadius="3"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_shape"
            android:padding="@dimen/_4sdp"
            android:shadowColor="@color/grey"
            android:shadowRadius="3"
            android:text="@string/manual"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</LinearLayout>